to-do-mobile.css
body {
  margin: 0;
  --app-bg-color: #a9f347;
}
.loader {
  background-color: var(--app-bg-color);
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  padding: 0;
  font-weight: 100;
  animation: 2s ease-in 0s normal forwards 1 fadeInLoader;
  z-index: 2;
}
.loader h1,
.loader h2 {
  padding-left: 30px;
}
.loader h1 {
  padding-top: 153px;
  font-size: 68px;
}
.list-container h2 {
  font-size: 24px;
}
.list-container p {
  font-size: 14px;
}
label {
  font-size: 18px;
}

@keyframes fadeInLoader {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
.container,
h1 {
  display: inline-block;
  cursor: pointer;
  padding-left: 30px;
  font-size: 18px;
  font-weight: 700;
}
html {
  margin: 0;
  font-family: "Roboto", sans-serif;
}

header {
  background-color: var(--app-bg-color);
  display: flex;
  align-items: center;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.24);
  /* position: absolute;
  top: 0;
  width: 100%; */
}
.bar1,
.bar2,
.bar3 {
  width: 18px;
  height: 2px;
  background-color: #333;
  margin: 3px 0;
  transition: 0.4s;
}

.change .bar1 {
  /* -webkit-transform: rotate(-45deg) translate(-2px, px); */
  transform: rotate(-45deg) translate(-3px, 2px);
}

.change .bar2 {
  opacity: 0;
}

.change .bar3 {
  /* -webkit-transform: rotate(45deg) translate(-8px, -8px); */
  transform: rotate(45deg) translate(-5px, -4px);
}

.new-task {
  display: block;
  margin-top: 10px;
}

.new-list,
.new-task {
  display: block;
  border: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0.24);
  padding: 10px;
  margin-top: 30px;
}
.new-list {
  font-size: 24px;
}
.new-task {
  font-size: 18px;
}

.complete-btn {
  position: absolute;
  bottom: 0;
  margin: 0 auto;
  font-size: 1.5em;
}
.list-container {
  width: 70%;
  margin: 30px;
}

